		Print connection stats for equivalent nets
170406_1251	SCRC fixes and power mos settings
		Cell name filters for models
170412_0102	Save calculated leak voltage (bug fix)
		Print leak voltages in interactive
		Print cell filters even when there are no conditions (bug fix)
		Remove model lookup based on parameters (not possible with cell name filter)
		Print overvoltage limit formula and calculation, along with model conditions for overvoltage errors
		SCRC net calculation for power mos gate (bug fix)
		Standardized and simplified power calculation printing
170421_1414	Changed Vth flag in current calculation to reduce false leak errors(cludge)
		Don't report shorts to open power if permitted relative
		Changed SCRC processing to work with all logic nets, not just inverters
		Errors generated when can't set SCRC net
		SCRC nets should not be flagged as calculated
170427_1824	Don't show shorts at vth difference with clamped nets
		Don't adjust open voltages in simulation propagation
		Count attempts and not actual changes for SCRC nodes
		Renamed IsSCRCNet -> IsSCRCLogicNet
		Added function to count active connections
		Added secondary Hi-Z gate check to detect floating nets due to floating gate input
		In SCRC mode, set input for all open power mos (not just SCRC power mos)
		In SCRC mode, if can not set gate net, set the current net
		When setting power for power mos gates, ignore relatives
		When checking for SCRC logic, make sure one of the power nets is SCRC
		When checking for leak paths, ignore paths to calculated voltages caused by the device
		Corrected spelling CvdDb_p -> CvcDb_p
		When setting calculated sim voltage, grab alias from min/max default
170504_1251	Print resistor calculations to log only
		Equations allow SI notation
		Fixed calculated bias printing
170508_1111	Added device count routine
		Propagate power through power resistors 
		No missing bias errors if min/max defined for sim power
