@@ -25,30 +25,67 @@
 
 #include "CCvcDb.hh"
 
-CDeviceCount::CDeviceCount(netId_t theNetId, CCvcDb * theCvcDb_p) {
+CDeviceCount::CDeviceCount(netId_t theNetId, CCvcDb * theCvcDb_p, instanceId_t theInstanceId) {
 // count devices attached to theNet
+	netId = theNetId;
 	for ( auto device_it = theCvcDb_p->firstSource_v[theNetId]; device_it != UNKNOWN_DEVICE; device_it = theCvcDb_p->nextSource_v[device_it] ) {
-		switch( theCvcDb_p->deviceType_v[device_it] ) {
-		case NMOS:
-		case LDDN: { nmosCount++; break; }
-		case PMOS:
-		case LDDP: { pmosCount++; break; }
-		case RESISTOR: { resistorCount++; break; }
-		case CAPACITOR: { capacitorCount++; break; }
-		case DIODE: { diodeCount++; break; }
-		default: break;
+		if ( theCvcDb_p->IsSubcircuitOf(theCvcDb_p->deviceParent_v[device_it], theInstanceId) ) {
+			switch( theCvcDb_p->deviceType_v[device_it] ) {
+			case NMOS:
+			case LDDN: { nmosCount++; break; }
+			case PMOS:
+			case LDDP: { pmosCount++; break; }
+			case RESISTOR: { resistorCount++; break; }
+			case CAPACITOR: { capacitorCount++; break; }
+			case DIODE: { diodeCount++; break; }
+			default: break;
+			}
 		}
 	}
 	for ( auto device_it = theCvcDb_p->firstDrain_v[theNetId]; device_it != UNKNOWN_DEVICE; device_it = theCvcDb_p->nextDrain_v[device_it] ) {
-		switch( theCvcDb_p->deviceType_v[device_it] ) {
-		case NMOS:
-		case LDDN: { nmosCount++; break; }
-		case PMOS:
-		case LDDP: { pmosCount++; break; }
-		case RESISTOR: { resistorCount++; break; }
-		case CAPACITOR: { capacitorCount++; break; }
-		case DIODE: { diodeCount++; break; }
-		default: break;
+		if ( theCvcDb_p->IsSubcircuitOf(theCvcDb_p->deviceParent_v[device_it], theInstanceId) ) {
+			switch( theCvcDb_p->deviceType_v[device_it] ) {
+			case NMOS:
+			case LDDN: { nmosCount++; break; }
+			case PMOS:
+			case LDDP: { pmosCount++; break; }
+			case RESISTOR: { resistorCount++; break; }
+			case CAPACITOR: { capacitorCount++; break; }
+			case DIODE: { diodeCount++; break; }
+			default: break;
+			}
 		}
 	}
+	for ( auto device_it = theCvcDb_p->firstGate_v[theNetId]; device_it != UNKNOWN_DEVICE; device_it = theCvcDb_p->nextGate_v[device_it] ) {
+		if ( theCvcDb_p->IsSubcircuitOf(theCvcDb_p->deviceParent_v[device_it], theInstanceId) ) {
+			switch( theCvcDb_p->deviceType_v[device_it] ) {
+			case NMOS:
+			case LDDN: { nmosGateCount++; break; }
+			case PMOS:
+			case LDDP: { pmosGateCount++; break; }
+			default: break;
+			}
+		}
+	}
+	for ( auto device_it = theCvcDb_p->firstBulk_v[theNetId]; device_it != UNKNOWN_DEVICE; device_it = theCvcDb_p->nextBulk_v[device_it] ) {
+		if ( theCvcDb_p->IsSubcircuitOf(theCvcDb_p->deviceParent_v[device_it], theInstanceId) ) {
+			switch( theCvcDb_p->deviceType_v[device_it] ) {
+			case NMOS:
+			case LDDN: { nmosBulkCount++; break; }
+			case PMOS:
+			case LDDP: { pmosBulkCount++; break; }
+			default: break;
+			}
+		}
+	}
+}
+
+void CDeviceCount::Print(CCvcDb * theCvcDb_p) {
+	cout << "Device counts for net " << theCvcDb_p->NetName(netId) << endl;
+	cout << "Source/Drain counts" << endl;
+	cout << "NMOS: " << nmosCount << "; PMOS: " << pmosCount << "; RESISTOR: " << resistorCount << "; CAPACITOR: " << capacitorCount << "; DIODE: " << diodeCount << endl;
+	cout << "Gate counts" << endl;
+	cout << "NMOS: " << nmosGateCount << "; PMOS: " << pmosGateCount << endl;
+	cout << "Bulk counts" << endl;
+	cout << "NMOS: " << nmosBulkCount << "; PMOS: " << pmosBulkCount << endl;
 }
