@@ -62,6 +62,7 @@ typedef int32_t eventKey_t;
 #define UNKNOWN_NET UINT32_MAX
 #define UNKNOWN_SUBCIRCUIT UINT32_MAX
 #define UNKNOWN_DEVICE UINT32_MAX
+#define UNKNOWN_INSTANCE UINT32_MAX
 
 #define UNKNOWN_VOLTAGE (INT32_MAX)
 
